--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -10,3 +10,4 @@
 <% end %>
 <br>
 <%= link_to "Change Subscriptions", edit_subscription_path(@account.id), class: "btn btn-primary" %>
+<%= link_to "Cancel Subscriptions", subscriptions_cancel_subscription_path, class: "btn btn-primary" %>
